--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <li>
+        <a href="index.html">Project 1</a>
+        </li>
+        <li>
+        <a href="index.html">Project 2</a>
+        </li>
+        <li>
+        <a href="index.html">Project 3</a>
+        </li>
 </body>
 </html>
