--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <li>
-        <a href="index.html">Project 1</a>
+        <!-- <a href="index.html">Project 1</a>
         </li>
         <li>
         <a href="index.html">Project 2</a>
         </li>
         <li>
-        <a href="index.html">Project 3</a>
+        <a href="index.html">Project 3</a> -->
         </li>
 </body>
 </html>
