--- a/JQuery/index.html
+++ b/JQuery/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <header>
+        <nav>
+        <a href="index.html" div class ="active">jQuery Text</a>
+        <a href="effects.html">|  &MediumSpace; &MediumSpace; &MediumSpace; jQuery Effects</a>
+        <a href="css.html">| &MediumSpace; &MediumSpace; &MediumSpace; jQuery CSS</a>
+
+        </nav>
         <img src="images/jquery-logo.png" alt="jqlogo" class="center">
     </header>
     <div id="accordion">
@@ -69,9 +75,15 @@
     $( "#accordion" ).accordion();
     $("body").css("background-color", "#010101");
     $("#accordion").accordion('option', 'position', 'center');
+    $("nav").css("background-color", "#22ABE2");
+    $("footer").css("background-color", "#1D2E3B");
+    $("h3").css("font-size", "105%");
+    $("p").css("color", "#C5C5C5");
   } );
 </script>
 
-
+<footer>
+    <p>&copy; Blue Designs 2024 </p>
+</footer>
 </body>
 </html>
