created css.html and effects.html

--- a/JQuery/effects.html
+++ b/JQuery/effects.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <nav>
-        <a href="index.html" div class ="active">jQuery Text</a>
-        <a href="effects.html">|  &MediumSpace; &MediumSpace; &MediumSpace; jQuery Effects</a>
+        <a href="index.html">jQuery Text</a>
+        <a href="effects.html" div class ="active">|  &MediumSpace; &MediumSpace; &MediumSpace; jQuery Effects</a>
         <a href="css.html">| &MediumSpace; &MediumSpace; &MediumSpace; jQuery CSS</a>
 
         </nav>
@@ -134,7 +134,6 @@
                     <input id="horizontal-spinner" class="ui-spinner-input">
                     <button>Book Now!</button>
                   </div>
-            
               </div>
           </p>
         </div>
