--- a/JQuery/effects.html
+++ b/JQuery/effects.html
@@ -141,17 +141,7 @@
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
-<script>
-    $( function() {
-    $( "#accordion" ).accordion();
-    $("body").css("background-color", "#010101");
-    $("#accordion").accordion('option', 'position', 'center');
-    $("nav").css("background-color", "#22ABE2");
-    $("footer").css("background-color", "#1D2E3B");
-    $("h3").css("font-size", "105%");
-    $("p").css("color", "#C5C5C5");
-  } );
-</script>
+<script src="js/scripts.js"></script>
 
 <footer>
     <p>&copy; Blue Designs 2024 </p>
