--- a/JQuery/css.html
+++ b/JQuery/css.html
@@ -23,7 +23,7 @@
         
         
         <nav class="mobile">
-            <button>Menu</button>
+            <button class="ui-button ui-widget ui-corner-all">Menu</button>
         <ul>
         <li><a href="index.html">jQuery Text</a></li>
         <li><a href="effects.html">jQuery Effects</a></li>
