--- a/JQuery/effects.html
+++ b/JQuery/effects.html
@@ -22,7 +22,7 @@
         
         
         <nav class="mobile">
-            <button>Menu</button>
+            <button class="ui-button ui-widget ui-corner-all">Menu</button>
         <ul>
         <li><a href="index.html">jQuery Text</a></li>
         <li><a href="effects.html" class ="active">jQuery Effects</a></li>
