--- a/JQuery/index.html
+++ b/JQuery/index.html
@@ -22,7 +22,7 @@
         
         
         <nav class="mobile">
-            <button>Menu</button>
+            <button class="ui-button ui-widget ui-corner-all">Menu</button>
         <ul>
         <li><a href="index.html" class ="active">jQuery Text</a></li>
         <li><a href="effects.html">jQuery Effects</a></li>
