--- a/JQuery/effects.html
+++ b/JQuery/effects.html
@@ -131,7 +131,8 @@
                   </div>
                 </fieldset>
               </div> 
-        </div> </div> </div>
+        </div> 
+    </div>
     
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> 
