validation attempt 1 cats.org

--- a/jQuery2/index.html
+++ b/jQuery2/index.html
@@ -51,11 +51,13 @@
       </div>
 
     </div>
+    </div>
+    </div>
 
     <script src="js/scripts.js"></script>
 
 <footer>
-<p>&MediumSpace; &copy; Blue Designs</p>
+<p> &copy; Blue Designs</p>
 </footer>
 </body>
 </html>
