--- a/jQuery3/index.html
+++ b/jQuery3/index.html
@@ -51,7 +51,7 @@
         <tr>
                 <td>
                     <img src="images/entrees/billy-mac.png" alt="billy">
-                    <div id="accordion" class="item">
+                    <div class="ui-accordion item">
                         <h3>THE BILLY MAC</h3>
                         <div>
                             <p>Our pride and joy. Dig into this juicy quarter-pound angus beef 
@@ -68,7 +68,7 @@
                 </td>
                 <td>
                     <img src="images/sides/ring-dingers.png" alt="rings">
-                    <div id="accordion item" class="item">
+                    <div class="ui-accordion item">
                         <h3>RING-DINGERS</h3>
                         <div>
                             <p>Our famous hand-breaded onion rings, 
@@ -85,7 +85,7 @@
                 </td>
                 <td>
                     <img src="images/entrees/hot-diggity-dogs.png" alt="diggity">
-                    <div id="accordion item" class="item">
+                    <div class="ui-accordion item">
                         <h3>HOT DIGGITY DOGS</h3>
                         <div>
                             <p>Can you take the heat?
