billy mac validation attempt #1

--- a/jQuery3/contact.html
+++ b/jQuery3/contact.html
@@ -59,7 +59,7 @@
         Shady Pines Dr. • Madisonville • KY • 42431 • (270) 245-2013
     </p> 
     <p>
-        Grant St. • Plano • TX • 75074 • (903) 888-6357</li>
+        Grant St. • Plano • TX • 75074 • (903) 888-6357
     </p>
     </div>
     </div>
